[gd_scene load_steps=2 format=3 uid="uid://bpw7g1pxjmtkc"]

[ext_resource type="Script" path="res://scenes/education_modules_demo.gd" id="1_jxtey"]

[node name="EducationModulesDemo" type="Node3D"]
script = ExtResource("1_jxtey")

[node name="3DContent" type="Node3D" parent="."]

[node name="ModelContainer" type="Node3D" parent="3DContent"]

[node name="Camera3D" type="Camera3D" parent="3DContent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 3)

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StatusLabel" type="Label" parent="UI"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 10.0
offset_bottom = 36.0
grow_horizontal = 2
text = "Initializing educational modules..."
horizontal_alignment = 1

[node name="ModeSelector" type="OptionButton" parent="UI"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -200.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 41.0
grow_horizontal = 0
item_count = 5
selected = 0
popup/item_0/text = "FREE_EXPLORATION"
popup/item_0/id = 0
popup/item_1/text = "GUIDED_LEARNING"
popup/item_1/id = 1
popup/item_2/text = "COMPARATIVE_STUDY"
popup/item_2/id = 2
popup/item_3/text = "ASSESSMENT"
popup/item_3/id = 3
popup/item_4/text = "CLINICAL_CASE"
popup/item_4/id = 4

[node name="Container" type="Control" parent="UI"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -100.0
grow_horizontal = 2
grow_vertical = 0

[node name="SystemSwitcherPanel" type="Panel" parent="UI/Container"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Container/SystemSwitcherPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_right = 96.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Brain System Switcher"
horizontal_alignment = 1

[node name="WholeButton" type="Button" parent="UI/Container/SystemSwitcherPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -15.0
offset_right = -250.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Whole Brain"

[node name="HalfButton" type="Button" parent="UI/Container/SystemSwitcherPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.0
offset_right = -50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Half Brain"

[node name="InternalButton" type="Button" parent="UI/Container/SystemSwitcherPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 50.0
offset_top = -15.0
offset_right = 150.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Internal"

[node name="BrainstemButton" type="Button" parent="UI/Container/SystemSwitcherPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 250.0
offset_top = -15.0
offset_right = 350.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Brainstem"

[node name="ComparativePanel" type="Panel" parent="UI/Container"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Container/ComparativePanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_right = 96.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Comparative Anatomy"
horizontal_alignment = 1

[node name="ComparisonDropdown" type="OptionButton" parent="UI/Container/ComparativePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -15.0
offset_right = 50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
selected = 0
popup/item_0/text = "Human vs Chimp Frontal Lobe"
popup/item_0/id = 0
popup/item_0/metadata = "human_vs_chimp_frontal_lobe"
popup/item_1/text = "Normal vs Alzheimer's"
popup/item_1/id = 1
popup/item_1/metadata = "normal_vs_alzheimers"

[node name="CompareButton" type="Button" parent="UI/Container/ComparativePanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 100.0
offset_top = -15.0
offset_right = 175.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Compare"

[node name="PathwayPanel" type="Panel" parent="UI/Container"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -80.0
grow_horizontal = 2
grow_vertical = 0

[node name="Label" type="Label" parent="UI/Container/PathwayPanel"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -96.5
offset_right = 96.5
offset_bottom = 26.0
grow_horizontal = 2
text = "Learning Pathway"
horizontal_alignment = 1

[node name="PathwayDropdown" type="OptionButton" parent="UI/Container/PathwayPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -250.0
offset_top = -15.0
offset_right = -50.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
item_count = 2
selected = 0
popup/item_0/text = "Introduction to Neuroanatomy"
popup/item_0/id = 0
popup/item_0/metadata = "intro_neuroanatomy"
popup/item_1/text = "Functional Neuroanatomy"
popup/item_1/id = 1
popup/item_1/metadata = "functional_neuroanatomy"

[node name="StartButton" type="Button" parent="UI/Container/PathwayPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 0.0
offset_top = -15.0
offset_right = 100.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
text = "Start"

[node name="NextButton" type="Button" parent="UI/Container/PathwayPanel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 150.0
offset_top = -15.0
offset_right = 250.0
offset_bottom = 15.0
grow_horizontal = 2
grow_vertical = 2
disabled = true
text = "Next Step"